--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@farcaster/miniapp-sdk": "^0.1.10",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.81.5",
     "class-variance-authority": "^0.7.1",
